--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gh-pages": "^6.3.0"
   },
   "scripts": {
-    "deploy": "gh-pages -d ."
+    "deploy": "gh-pages -d .",
+    "predeploy": "npm run build",
+    "build": "cp index.html 404.html"
   }
 }
